// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al componente GifExpert App * debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Gift Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Nanatsu no taiza"
      key="Nanatsu no taiza"
    />
    <GifGrid
      category="Parasyte"
      key="Parasyte"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas al componente GifExpert App * debe renderizar el componente de manera correcta 1`] = `
<Fragment>
  <h2>
    Gift Expert App
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
